# walkthrough

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: rust-ci.yml
src/: entry.rs  error.rs  iter.rs  lib.rs
src/async/: iter.rs  mod.rs  state.rs  unix.rs  windows.rs
src/sync/: entry.rs  iter.rs  mod.rs  state.rs  unix.rs  windows.rs
tests/: async.rs  sync.rs  window.rs
tests/fixtures/: basic.yaml
