[package]
name = "walkthrough"
version = "0.1.0"
authors = ["Edgar Linton <150683481+edgar-linton@users.noreply.github.com>"]
edition = "2024"
description = "A Rust crate for recursive directory traversal."
repository = "https://github.com/edgar-linton/walkthrough"
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "walkdir", "recursive", "iterator"]
categories = ["filesystem", "os"]

[dependencies]
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
once_cell = "1.21"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }


[dev-dependencies]
tempfile = "3"
